# tony-cli

./: .gitignore  CLAUDE.md  POWERGEN_ROADMAP.md  README.md  TONY_ROADMAP.md  claude-progress.md  claude_progress.md  pyproject.toml  tony
.claude/: architecture.md  progress.md  progress_archive.md  roadmap.md
.powergen/: project.json
.powergen_catalog/: test.catalog.json
.powergen_skill/: distill.md
powergen/: README.md  __init__.py  catalog.py  catalog_filler.py  catalog_planner.py  cli.py  content_generator.py  distiller.py  dynamic_renderer.py  mock_client.py  models.py  planner.py  prompts.py  prompts_catalog.py  prompts_catalog_planner.py  prompts_content_generator.py  prompts_distill.py  prompts_template.py  renderer.py  repl.py  spec_builder.py  state.py  template_filler.py  template_reader.py  theme_extractor.py  workspace.py
powergen/layer2/: README.md  SKILL.md  __init__.py  composer.py  inventory_gen.py  planner.py  slide_cloner.py
powergen/layer2/composer/: annotator.py  compiler.py  composer.py  planner.py  schema_gen.py  schema_loader.py  slide_cloner.py  slot_resolver.py  spec.py
powergen/layer2/renderers/: __init__.py  bullet.py
powergen/layer2/schemas/: test_template.schema.json
powergen/layer2/scripts/: __init__.py  (+3 more)
rust/: README.md
src/: main.py
src/commands/: __init__.py
tests/: test_porting_workspace.py
tony/: __init__.py  api_client.py  cli.py  compressor.py  models.py  permissions.py  repl.py  runtime.py  system_prompt.py  tools.py
tony_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+57 files in other folders)
