[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tony-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-pptx>=1.0",
    "markitdown[pptx]>=0.1",
    "defusedxml>=0.7",
    "lxml>=5.0",
]

[project.scripts]
tony = "tony.cli:main"
powergen = "powergen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tony*", "powergen*"]
